--- a/gallery.html
+++ b/gallery.html
@@ -8,8 +8,13 @@
 </head>
 <body>
 
+<div class="container">
+    <div class="jumbotron">
+        <h1>The Image Gallery</h1>
+        <p>A bunch of beautiful images that I didn't take</p>
+    </div>
+</div>
 
-    
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <script   src="https://code.jquery.com/jquery-3.3.1.js"   integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="   crossorigin="anonymous"></script>
 </body>
