--- a/gallery.html
+++ b/gallery.html
@@ -17,7 +17,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				  </button> 
-				<a class="navbar-brand" href="#">IMGS</a>
+				<a class="navbar-brand" href="#"> <span class="glyphicon glyphicon-picture" aria-hidden="true"></span> IMGS</a>
 			</div>
 			<div class="collapse navbar-collapse" id="bs-nav-demo">			
 			<ul class="nav navbar-nav">
@@ -34,7 +34,7 @@
 
 <div class="container">
     <div class="jumbotron">
-        <h1>The Image Gallery</h1>
+        <h1><span class="glyphicon glyphicon-camera" aria-hidden="true"></span> The Image Gallery</h1>
         <p>A bunch of beautiful images that I didn't take</p>
     </div>
 
